# cpp-project-template

./: .prettierignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json
.github/workflows/: ci.yml  release.yml
l10n/: bundle.l10n.json  bundle.l10n.zh-cn.json
src/: abstract-project.ts  cmake-project.ts  easyx-project.ts  extension.ts  logger.ts  makefile-project.ts  meson-project.ts  project-type.ts  utility.ts  win32-project.ts
src/conan/: package-manager.ts  type.ts
src/conan/core/: setup.ts
src/controllers/: project-controller.ts
src/explorerCommands/: new.ts  utility.ts
src/pkgmgr/: interface.ts  manager-factory.ts  project-creator.ts
src/vcpkg/: index.ts  package-manager.ts  project.ts  type.ts
src/vcpkg/core/: setup.ts  wrapper.ts
src/vcpkg/operations/: add.ts  install.ts  integrate.ts  search.ts  upgrade.ts
templates/cmake-basic/c-exe-project/: CMakeLists.txt
templates/cmake-basic/c-lib-project/: CMakeLists.txt
templates/cmake-basic/c-lib-project/src/: lib.c
templates/cmake-basic/cpp-exe-project/src/: main.cpp
templates/cmake-basic/cpp-lib-project/src/: lib.cpp
templates/cmake-basic/cpp-module-exe-project/: CMakeLists.txt
templates/cmake-basic/cpp-module-exe-project/src/: main.cxx
templates/cmake-basic/cuda-lib-project/src/: lib.cu
templates/cmake-basic/objc-exe-project/src/: main.m
templates/cmake-basic/objc-lib-project/: CMakeLists.txt
templates/cmake-basic/objc-lib-project/src/: lib.m
templates/cmake/c-exe/src/: main.c
templates/cmake/cpp-exe/: CMakeLists.txt
templates/cmake/cpp-lib/: CMakeLists.txt
templates/cmake/cpp-module-exe/: CMakeLists.txt
templates/cmake/cuda-exe/: CMakeLists.txt
templates/cmake/cuda-exe/src/: main.cu
templates/cmake/cuda-lib/: CMakeLists.txt
templates/cmake/objc-exe/: CMakeLists.txt
templates/cmake/objcxx-exe/: CMakeLists.txt
templates/cmake/objcxx-exe/src/: main.mm
templates/cmake/objcxx-lib/: CMakeLists.txt
templates/cmake/objcxx-lib/src/: lib.mm
templates/easyx/: CMakeLists.txt
templates/easyx/src/: main.cpp
templates/files/c/: header.h  source.c
templates/files/cpp/: class.cpp  class.h  enum.h  header.h  interface.h  source.cpp
templates/makefile-basic/c-exe-project/: Makefile
templates/makefile-basic/c-exe-project/src/: main.c
templates/makefile-basic/cpp-lib-project/src/: lib.cpp
templates/makefile/c-lib/: Makefile
templates/makefile/c-lib/src/: lib.c
templates/makefile/cpp-exe/: Makefile
templates/makefile/cpp-exe/src/: main.cpp
templates/makefile/cpp-lib/: Makefile
templates/meson/c-exe-project/: meson.build
templates/meson/c-exe-project/src/: main.c
templates/meson/c-exe/src/: meson.build
templates/meson/c-lib-project/src/: meson.build
templates/meson/c-lib/src/: lib.c
templates/meson/cpp-exe-project/: meson.build
templates/meson/cpp-exe/src/: main.cpp  meson.build
templates/meson/cpp-lib/: meson.build
templates/meson/cpp-lib-project/src/: lib.cpp
templates/meson/cpp-lib/src/: meson.build
templates/opengl-project/: CMakeLists.txt
templates/opengl/src/: main.cpp
templates/sdl/: CMakeLists.txt
templates/sdl-project/: CMakeLists.txt
templates/sdl-project/src/: main.cpp
templates/sdl3/: CMakeLists.txt
templates/sdl3-project/: CMakeLists.txt
templates/sdl3-project/src/: main.cpp
templates/win32-project/: CMakeLists.txt
templates/win32/src/: main.cpp
